--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </svg>info@devstudio.com</a>
                 </li>
                 <li class="tel kntkt-dist"><a href="tel:+380961111111" class="link">
-                    <svg class="logo-mail" width="16px" height="12px">
+                    <svg class="logo-mail" width="10px" height="16px">
                         <use href="./images/icons.svg#icon-smartphone"></use>
                     </svg>+38 096 111 11 11</a></li>
             </ul>
@@ -52,28 +52,28 @@
                 <h2 class="visually-hidden">Наші переваги</h2>
                 <ul class="perevagy">
                     <li class="logo-perevagy">
-                        <div class="bg-perevagy"><svg class="icon-perevagy" height="70px">
+                        <div class="bg-perevagy"><svg class="icon-perevagy" width="70px" height="70px">
                             <use href="./images/icons.svg#icon-antenna"></use>
                         </svg></div>
                         <h3 class="title-perevagy">Увага до деталей</h3>
                         <p class="paragraph-perevagy">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
                     <li class="logo-perevagy">
-                        <div class="bg-perevagy"><svg class="icon-perevagy" height="70px">
+                        <div class="bg-perevagy"><svg class="icon-perevagy" width="70px" height="70px">
                             <use href="./images/icons.svg#icon-clock"></use>
                         </svg></div>
                         <h3 class="title-perevagy">Пунктуальність</h3>
                         <p class="paragraph-perevagy">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
                     <li class="logo-perevagy">
-                        <div class="bg-perevagy"><svg class="icon-perevagy" height="70px">
+                        <div class="bg-perevagy"><svg class="icon-perevagy" width="70px" height="70px">
                             <use href="./images/icons.svg#icon-diagram"></use>
                         </svg></div>
                         <h3 class="title-perevagy">Планування</h3>
                         <p class="paragraph-perevagy">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li class="logo-perevagy">
-                        <div class="bg-perevagy"><svg class="icon-perevagy" height="70px">
+                        <div class="bg-perevagy"><svg class="icon-perevagy" width="70px" height="70px">
                             <use href="./images/icons.svg#icon-astronaut"></use>
                         </svg></div>
                         <h3 class="title-perevagy">Сучасні технології</h3>
