--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
                 <ul class="work-list">
                     <div class="border-card">
                         <li><article>
-                                <a href="#">
+                                <a href="#" class="border-shadow">
                                     <img src="./images/portf-01.jpg" alt="ноутбук з відкритим сайтом" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio">Технокряк</h2>
@@ -68,7 +68,7 @@
                     </div>
                     <div class="border-card">
                         <li><article>
-                                <a href="#">
+                                <a href="#" class="border-shadow">
                                     <img src="./images/portf-02.jpg" alt="баскетболісти" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="border-card">
                         <li><article>
-                                <a href="#">
+                                <a href="#" class="border-shadow">
                                     <img src="./images/portf-03.jpg" alt="логотип форми риби" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio">Ресторан <span lang="en">Seafood</span></h2>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="border-card">
                         <li><article>
-                                <a href="#">
+                                <a href="#" class="border-shadow">
                                     <img src="./images/portf-04.jpg" alt="навушники" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio">Проєкт <span lang="en">Prime</span></h2>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="border-card">
                         <li><article>
-                                <a href="#">
+                                <a href="#" class="border-shadow">
                                     <img src="./images/portf-05.jpg" alt="дві коробки" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio">Проєкт <span lang="en">Boxes</span></h2>
@@ -116,7 +116,7 @@
                     </div>
                     <div class="border-card">
                         <li><article>
-                                <a href="#">
+                                <a href="#" class="border-shadow">
                                     <img src="./images/portf-06.jpg" alt="монітор з відкритим сайтом" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio" lang="en">Inspiration has no Borders</h2>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="border-card">
                         <li><article>
-                                <a href="#">
+                                <a href="#" class="border-shadow">
                                     <img src="./images/portf-07.jpg" alt="журнал" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio">Видання <span lang="en">Limited Edition</span></h2>
@@ -140,7 +140,7 @@
                     </div>
                     <div class="border-card">
                         <li><article>
-                                <a href="#">
+                                <a href="#" class="border-shadow">
                                     <img src="./images/portf-08.jpg" alt="бірка" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio">Проєкт <span lang="en">LAB</span></h2>
@@ -152,7 +152,7 @@
                     </div>
                     <div class="border-card">
                         <li><article>
-                                <a href="#">
+                                <a href="#" class="border-shadow">
                                     <img src="./images/portf-09.jpg" alt="руки друкують на ноутбуці" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio" lang="en">Growing Business</h2>
