--- a/portfolio.html
+++ b/portfolio.html
@@ -54,114 +54,105 @@
                 </ul>
                 <!-- список робіт -->
                 <ul class="work-list">
-                    <div class="border-card">
-                        <li><article>
-                                <a href="#" class="border-shadow">
-                                    <img src="./images/portf-01.jpg" alt="ноутбук з відкритим сайтом" width="370" />
-                                    <div class="card-content">
-                                        <h2 class="title-portfolio">Технокряк</h2>
-                                        <p class="subname-portfolio">Веб-сайт</p>
-                                    </div>
-                                </a>
-                            </article>    
-                        </li>
-                    </div>
-                    <div class="border-card">
-                        <li><article>
-                                <a href="#" class="border-shadow">
-                                    <img src="./images/portf-02.jpg" alt="баскетболісти" width="370" />
-                                    <div class="card-content">
-                                        <h2 class="title-portfolio">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                                        <p class="subname-portfolio">Дизайн</p>
-                                    </div>
-                                </a>
-                            </article>    
-                        </li>
-                    </div>
-                    <div class="border-card">
-                        <li><article>
-                                <a href="#" class="border-shadow">
-                                    <img src="./images/portf-03.jpg" alt="логотип форми риби" width="370" />
-                                    <div class="card-content">
-                                        <h2 class="title-portfolio">Ресторан <span lang="en">Seafood</span></h2>
-                                        <p class="subname-portfolio">Додаток</p>
-                                    </div>
-                                </a>
-                            </article>    
-                        </li>
-                    </div>
-                    <div class="border-card">
-                        <li><article>
-                                <a href="#" class="border-shadow">
-                                    <img src="./images/portf-04.jpg" alt="навушники" width="370" />
-                                    <div class="card-content">
-                                        <h2 class="title-portfolio">Проєкт <span lang="en">Prime</span></h2>
-                                        <p class="subname-portfolio">Маркетинг</p>
-                                    </div>
-                                </a>
-                            </article>    
-                        </li>
-                    </div>
-                    <div class="border-card">
-                        <li><article>
-                                <a href="#" class="border-shadow">
-                                    <img src="./images/portf-05.jpg" alt="дві коробки" width="370" />
-                                    <div class="card-content">
-                                        <h2 class="title-portfolio">Проєкт <span lang="en">Boxes</span></h2>
-                                        <p class="subname-portfolio">Додаток</p>
-                                    </div>
-                                </a>
-                            </article>    
-                        </li>
-                    </div>
-                    <div class="border-card">
-                        <li><article>
-                                <a href="#" class="border-shadow">
-                                    <img src="./images/portf-06.jpg" alt="монітор з відкритим сайтом" width="370" />
-                                    <div class="card-content">
-                                        <h2 class="title-portfolio" lang="en">Inspiration has no Borders</h2>
-                                        <p class="subname-portfolio">Веб-сайт</p>
-                                    </div>
-                                </a>
-                            </article>    
-                        </li>
-                    </div>
-                    <div class="border-card">
-                        <li><article>
-                                <a href="#" class="border-shadow">
-                                    <img src="./images/portf-07.jpg" alt="журнал" width="370" />
-                                    <div class="card-content">
-                                        <h2 class="title-portfolio">Видання <span lang="en">Limited Edition</span></h2>
-                                        <p class="subname-portfolio">Дизайн</p>
-                                    </div>
-                                </a>
-                            </article>    
-                        </li>
-                    </div>
-                    <div class="border-card">
-                        <li><article>
-                                <a href="#" class="border-shadow">
-                                    <img src="./images/portf-08.jpg" alt="бірка" width="370" />
-                                    <div class="card-content">
-                                        <h2 class="title-portfolio">Проєкт <span lang="en">LAB</span></h2>
-                                        <p class="subname-portfolio">Маркетинг</p>
-                                    </div>
-                                </a>
-                            </article>    
-                        </li>
-                    </div>
-                    <div class="border-card">
-                        <li><article>
-                                <a href="#" class="border-shadow">
-                                    <img src="./images/portf-09.jpg" alt="руки друкують на ноутбуці" width="370" />
-                                    <div class="card-content">
-                                        <h2 class="title-portfolio" lang="en">Growing Business</h2>
-                                        <p class="subname-portfolio">Додаток</p>
-                                    </div>
-                                </a>
-                            </article>    
-                        </li>
-                    </div>
+                    <li class="border-card">
+                        <article class="border-shadow">
+                            <a href="#" class="link">
+                                <img src="./images/portf-01.jpg" alt="ноутбук з відкритим сайтом" width="370" />
+                                <div class="card-content">
+                                    <h2 class="title-portfolio">Технокряк</h2>
+                                    <p class="subname-portfolio">Веб-сайт</p>
+                                </div>
+                            </a>
+                        </article>  
+                    </li>
+                    <li class="border-card">
+                        <article class="border-shadow">
+                            <a href="#" class="link">
+                                <img src="./images/portf-02.jpg" alt="баскетболісти" width="370" />
+                                <div class="card-content">
+                                    <h2 class="title-portfolio">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                                    <p class="subname-portfolio">Дизайн</p>
+                                </div>
+                            </a>
+                        </article>    
+                    </li>
+                    <li class="border-card">
+                        <article class="border-shadow">
+                            <a href="#" class="link">
+                                <img src="./images/portf-03.jpg" alt="логотип форми риби" width="370" />
+                                <div class="card-content">
+                                    <h2 class="title-portfolio">Ресторан <span lang="en">Seafood</span></h2>
+                                    <p class="subname-portfolio">Додаток</p>
+                                </div>
+                            </a>
+                        </article>    
+                    </li>
+                    <li class="border-card">
+                        <article class="border-shadow">
+                            <a href="#" class="link">
+                                <img src="./images/portf-04.jpg" alt="навушники" width="370" />
+                                <div class="card-content">
+                                    <h2 class="title-portfolio">Проєкт <span lang="en">Prime</span></h2>
+                                    <p class="subname-portfolio">Маркетинг</p>
+                                </div>
+                            </a>
+                        </article>    
+                    </li>
+                    <li class="border-card">
+                        <article class="border-shadow">
+                            <a href="#" class="link">
+                                <img src="./images/portf-05.jpg" alt="дві коробки" width="370" />
+                                <div class="card-content">
+                                    <h2 class="title-portfolio">Проєкт <span lang="en">Boxes</span></h2>
+                                    <p class="subname-portfolio">Додаток</p>
+                                </div>
+                            </a>
+                        </article>    
+                    </li>
+                    <li class="border-card">
+                        <article class="border-shadow">
+                            <a href="#" class="link">
+                                <img src="./images/portf-06.jpg" alt="монітор з відкритим сайтом" width="370" />
+                                <div class="card-content">
+                                    <h2 class="title-portfolio" lang="en">Inspiration has no Borders</h2>
+                                    <p class="subname-portfolio">Веб-сайт</p>
+                                </div>
+                            </a>
+                        </article>    
+                    </li>
+                    <li class="border-card">
+                        <article class="border-shadow">
+                            <a href="#" class="link">
+                                <img src="./images/portf-07.jpg" alt="журнал" width="370" />
+                                <div class="card-content">
+                                    <h2 class="title-portfolio">Видання <span lang="en">Limited Edition</span></h2>
+                                    <p class="subname-portfolio">Дизайн</p>
+                                </div>
+                            </a>
+                        </article>    
+                    </li>
+                    <li class="border-card">
+                        <article class="border-shadow">
+                            <a href="#" class="link">
+                                <img src="./images/portf-08.jpg" alt="бірка" width="370" />
+                                <div class="card-content">
+                                    <h2 class="title-portfolio">Проєкт <span lang="en">LAB</span></h2>
+                                    <p class="subname-portfolio">Маркетинг</p>
+                                </div>
+                            </a>
+                        </article>    
+                    </li>
+                    <li class="border-card">
+                        <article class="border-shadow">
+                            <a href="#" class="link">
+                                <img src="./images/portf-09.jpg" alt="руки друкують на ноутбуці" width="370" />
+                                <div class="card-content">
+                                    <h2 class="title-portfolio" lang="en">Growing Business</h2>
+                                    <p class="subname-portfolio">Додаток</p>
+                                </div>
+                            </a>
+                        </article>    
+                    </li>
                 </ul>
             </div>
         </section>
